--- a/extra/man/stackablectl.1
+++ b/extra/man/stackablectl.1
@@ -117,6 +117,9 @@ Interact with locally cached files
 stackablectl\-experimental\-debug(1)
 EXPERIMENTAL: Launch a debug container for a Pod
 .TP
+stackablectl\-version(1)
+Retrieve version data of the stackablectl installation
+.TP
 stackablectl\-help(1)
 Print this message or the help of the given subcommand(s)
 .SH VERSION
